--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "ipython>=9.7.0",
     "langchain>=1.1.0",
     "langchain-openai>=1.1.0",
+    "langgraph-cli[inmem]>=0.4.7",
     "python-dotenv>=1.2.1",
 ]
